# book-spine-cataloguer

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md
include/: spine_recognize.h
src/: spine_recognize.cpp
